# intro_c

./: CMakeLists.txt  PreLoad.cmake.bak  README.rst
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
_templates/mustache/skeleton-c/: data.json  data.toml  data.yaml
_templates/mustache/skeleton-c/{{name}}/: Doxyfile_c.txt.mustache
_templates/mustache/skeleton-c/{{name}}/choices/: post_gen_project.groovy.mustache  post_gen_project.py.mustache  post_render.groovy.mustache  post_render.py.mustache  post_render.rb.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/autotools/: Makefile.am  configure.ac.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/cmake/: CMakeLists.txt.mustache  targets-uninstall.cmake.in
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/gradle/: build.gradle.mustache  gradle.properties  settings.gradle.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/make/: Makefile.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/meson/: Makefile.bak.mustache  build.ninja.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/ninja/: Makefile.bak.mustache  build.ninja.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/premake/: premake.lua.mustache  premake4.lua.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/rake/: Rakefile.mustache  rakefile.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_build_tool/scons/: SConstruct.mustache
_templates/mustache/skeleton-c/{{name}}/choices/_parent_init/: vcs_bkup.sh
_templates/mustache/skeleton-c/{{name}}/choices/_parent_readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/autotools/: Makefile.am.mustache  configure.ac.mustache  targets.am
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/cmake/: CMakeLists.txt.mustache  targets.cmake
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/gradle/: build-targets.gradle  build.gradle.mustache  settings.gradle.mustache  targets.gradle
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/make/: Makefile-targets.mk  Makefile.new.mustache  configure.sh
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/meson/: meson.build.mustache  meson_options.txt
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/ninja/: build-targets.ninja  build.ninja.new.mustache  configure.sh  rules-c.ninja
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/premake/: premake-targets.lua  premake.lua.mustache  premake4.lua.mustache
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/rake/: Rakefile.new.mustache  configure.sh  rakefile-rules-c.rb  rakefile-targets.rb  rakefile.new.mustache
_templates/mustache/skeleton-c/{{name}}/choices/build_tool/scons/: SConstruct.mustache
_templates/mustache/skeleton-c/{{name}}/choices/ffi_lib/native/: classic_asm.c.bak.mustache  classic_c.c.mustache  classic_f90.f90.bak.mustache
_templates/mustache/skeleton-c/{{name}}/choices/license/: LICENSE_GPL-3.0+.mustache
_templates/mustache/skeleton-c/{{name}}/choices/readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
_templates/mustache/skeleton-c/{{name}}/choices/testfrwk/check/tests/: tc_classic.c.mustache
_templates/mustache/skeleton-c/{{name}}/choices/testfrwk/cunit/tests/: tc_classic.c.mustache  tc_classic.h.mustache  tc_new.c.mustache  tc_new.h.mustache  ts_main.c.mustache
_templates/mustache/skeleton-c/{{name}}/include/{{parent}}/: {{project}}.h.mustache
_templates/mustache/skeleton-c/{{name}}/src/: {{name}}.pc.in.mustache
_templates/mustache/skeleton-c/{{name}}/src/{{parent}}/: main.c.mustache  person.c.mustache  {{project}}.c.mustache
_templates/mustache/skeleton-simple/: data.json  data.toml  data.yaml
_templates/mustache/skeleton-simple/{{name}}/choices/: post_gen_project.groovy.mustache  post_gen_project.rb.mustache  post_gen_project.sh.mustache
_templates/mustache/skeleton-simple/{{name}}/choices/license/: LICENSE_GPL-3.0+.mustache
_templates/mustache/skeleton-simple/{{name}}/choices/readme/: README.adoc.mustache  README.md.mustache  README.rst.mustache
api/: CMakeLists.txt  Doxyfile_c.txt  README.rst
api/include/intro_c/: classic.h  classic_puzzles.h  sequenceops.h
api/src/: intro_c-practice.pc.in
api/src/intro_c/: classic.c  classic_puzzles.c  sequenceops.c
api/tests/: tc_classic.c  tc_classic.h  tc_sequenceops.c  tc_sequenceops.h  ts_main.c
app/: CMakeLists.txt  Doxyfile_c.txt  README.rst
app/include/intro_c/: classic_f90.h  intro.h
app/src/: intro_c-intro.pc.in  intro_c-intro.pc.in.bak
app/src/intro_c/: intro.c  intro.h  main.c  person.c
app/tests/: tc_collections.c  tc_collections.h  ts_main.c
cforeign/: CMakeLists.txt  Doxyfile_c.txt  README.rst  targets-uninstall.cmake.in
cforeign/include/intro_c/: classic_asm.h  classic_c.h
cforeign/src/: intro_c-cforeign.pc.in
cforeign/src/intro_c/: classic_f90.f90.bak
cforeign/tests/: tc_classic.c  ts_main.c
common/: CMakeLists.txt  Doxyfile_c.txt  README.rst  targets.cmake
common/include/intro_c/: util.h
common/src/: intro_c-util.pc.in
common/src/intro_c/: util.c
common/tests/: tc_classic.c  tc_new.c  ts_main.c
